minor change to button

--- a/_includes/registration-button.html
+++ b/_includes/registration-button.html
@@ -3,7 +3,7 @@
   <div class="column">
     <!-- <a href="https://www.eventbrite.ca/"> -->
       <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ee7b74ff;">
-        Registrations will open soon
+        Registration (not yet available)
       </button>
     <!-- </a> -->
   </div>
