--- a/_includes/table-schedule-inperson-dec3.html
+++ b/_includes/table-schedule-inperson-dec3.html
@@ -8,7 +8,7 @@
     </tr>
   </thead>
   <tbody>
-    {% assign allspeakers = site.data.speakers | where: "session", "inperson" %}
+    {% assign allspeakers = site.data.speakers %}
     {% assign schedule_dec3 = site.data.schedule_dec3 | sort: 'time_start' %}
     {% for event in schedule_dec3 %}
       {% assign speakers = allspeakers | where: "time", event.time_start %}
