--- a/_includes/table-schedule-inperson-dec2.html
+++ b/_includes/table-schedule-inperson-dec2.html
@@ -8,7 +8,7 @@
     </tr>
   </thead>
   <tbody>
-    {% assign allspeakers = site.data.speakers | where: "session", "inperson" %}
+    {% assign allspeakers = site.data.speakers | where: "session", "dec2" %}
     {% assign schedule_dec2 = site.data.schedule_dec2 | sort: 'time_start' %}
     {% for event in schedule_dec2 %}
       {% assign speakers = allspeakers | where: "time", event.time_start %}
