--- a/_includes/abstract-card.html
+++ b/_includes/abstract-card.html
@@ -9,8 +9,9 @@
             <p class="title is-4"><strong>Title: </strong>{{ abstract.title }}</p>
             <p class="subtitle is-6">{{ abstract.authors }}</p>
             <p class="subtitle is-6">First author affiliation: {{ abstract.affiliation }}</p>
-            <p class="subtitle is-6">Corresponding author email: {{ abstract.email }}</p>
-
+            {% if abstract.email != "none" %}
+              <p class="subtitle is-6">Corresponding author email: {{ abstract.email }}</p>
+            {% endif %}
           </div>
         </div>
         <div class="content">
