--- a/_includes/table-schedule-inperson-dec3.html
+++ b/_includes/table-schedule-inperson-dec3.html
@@ -4,7 +4,7 @@
       <th>Time (ET)</th>
       <th>Session</th>
       <th>Speaker</th>
-      <th>Title</th>
+      <th>Description</th>
     </tr>
   </thead>
   <tbody>
@@ -13,9 +13,13 @@
     {% for event in schedule_dec3 %}
       {% assign speakers = allspeakers | where: "time", event.time_start %}
       {% capture speakernames %}
-        {% for speaker in speakers | sample: speakers.size %}
-          <a href="speakers#{{ speaker.photo | replace: ".jpg" "" }}">{{ speaker.fullname }}</a>{% if forloop.last == false %}, {% endif %}
-        {% endfor %}
+        {% if event.speaker %}
+          {{ event.speaker }}
+        {% else %}           
+          {% for speaker in speakers | sample: speakers.size %}
+            <a href="speakers#{{ speaker.photo | replace: ".jpg" "" }}">{{ speaker.fullname }}</a>{% if forloop.last == false %}, {% endif %}
+          {% endfor %}
+        {% endif %}
       {% endcapture %}
         <tr>
           <td>{{ event.time_start }} - {{ event.time_end }}</td>
