--- a/_includes/registration-button.html
+++ b/_includes/registration-button.html
@@ -1,16 +1,16 @@
 <div class="columns container">
   <div class="column is-one-half"></div>
   <div class="column">
-    <!-- <a href="https://www.eventbrite.ca/"> -->
+    <a href="https://www.eventbrite.ca/e/harms-and-risks-of-ai-in-the-military-workshop-tickets-1063566438849?aff=oddtdtcreator">
       <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ee7b74ff;">
-        Registration (not yet available)
+        Register now!
       </button>
-    <!-- </a> -->
+    </a>
   </div>
   <div class="column">
     <a href="https://openreview.net/group?id=harms-risks-ai-military.org/HRAIM/2024/Workshop">
       <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ee7b74ff;">
-        Submit an abstract!
+        Abstract submissions
       </button>
     </a>
   </div>
