--- a/_layouts/page-floatbutton.html
+++ b/_layouts/page-floatbutton.html
@@ -7,11 +7,11 @@ layout: page
 <script src="/assets/js/papaparse.js"></script>
 
 <!-- "/Register.html" -->
-<!-- <a style="position:fixed;width:150px;height:75px;bottom:10%;right:5%;background-color:#ff736fff;border-radius:200px;box-shadow: 2px 2px 3px #999;z-index:2">
+<a href="https://www.eventbrite.ca/e/harms-and-risks-of-ai-in-the-military-workshop-tickets-1063566438849?aff=oddtdtcreator" style="position:fixed;width:150px;height:75px;bottom:10%;right:5%;background-color:#ff736fff;border-radius:200px;box-shadow: 2px 2px 3px #999;z-index:2">
   <div style="margin-top:20px;text-align:center;color:white;font-size:20px;font-weight:1000">
     Register
   </div>
-</a> -->
+</a>
 
 <!-- Content -->
 {{ content }}
