--- a/_includes/registration-button.html
+++ b/_includes/registration-button.html
@@ -3,7 +3,7 @@
   <div class="column">
     <a href="https://www.eventbrite.ca/e/harms-and-risks-of-ai-in-the-military-workshop-tickets-1063566438849?aff=oddtdtcreator">
       <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ee7b74ff;">
-        Register now!
+        Register by Nov. 25!
       </button>
     </a>
   </div>
