--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,7 +1,8 @@
 ---
 ---
-$primary: #ff736fff;
+$primary: #ff933b;
 $red: $primary;
 $orange: #fd6501ff;
+// previous primary #ff736fff;
 // Import Main CSS file from theme
 @import "main";
