--- a/_includes/registration-button.html
+++ b/_includes/registration-button.html
@@ -2,14 +2,14 @@
   <div class="column is-one-half"></div>
   <div class="column">
     <!-- <a href="https://www.eventbrite.ca/"> -->
-      <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ee7b74ff;">
+      <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ff933b;">
         Registration (not yet available)
       </button>
     <!-- </a> -->
   </div>
   <div class="column">
     <a href="https://openreview.net/group?id=harms-risks-ai-military.org/HRAIM/2024/Workshop">
-      <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ee7b74ff;">
+      <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ff933b;">
         Submit an abstract!
       </button>
     </a>
