--- a/_includes/table-schedule-inperson-dec3.html
+++ b/_includes/table-schedule-inperson-dec3.html
@@ -4,7 +4,7 @@
       <th>Time (ET)</th>
       <th>Session</th>
       <th>Speaker</th>
-      <th>Description</th>
+      <th>Title</th>
     </tr>
   </thead>
   <tbody>
