--- a/_includes/abstract-card.html
+++ b/_includes/abstract-card.html
@@ -18,7 +18,7 @@
           <p class="subtitle is-5"><strong>Key Words: </strong>{{ abstract.keywords }}</p>
           {% if abstract.poster %}
           {% if abstract.poster_link %}
-            <a href="{{ abstract.poster_link }}" class="tag">Poster</a>
+            <a href="{{ abstract.poster_link }}" class="tag" target="_blank">Poster</a>
           {% else %}
             <a class="tag">Poster</a>
           {% endif %}
@@ -26,7 +26,7 @@
         
           {% if abstract.talk %}
           {% if abstract.talk_link %}
-            <a href="{{ abstract.talk_link }}" class="tag">Talk</a>
+            <a href="{{ abstract.talk_link }}" class="tag" target="_blank">Talk</a>
           {% else %}
             <a class="tag">Talk</a>
           {% endif %}
