modifs + add abs link

--- a/_includes/abstract-card.html
+++ b/_includes/abstract-card.html
@@ -6,11 +6,8 @@
       <div class="card-content">
         <div class="media">
           <div class="media-content">
-            <p class="title is-4"><strong>Title: </strong>{{ abstract.title }}</p>
+            <p class="title is-4"><strong></strong>{{ abstract.title }}</p>
             <p class="subtitle is-6">{{ abstract.authors }}</p>
-            {% if abstract.email != "none" %}
-              <p class="subtitle is-6">Corresponding author email: {{ abstract.email }}</p>
-            {% endif %}
           </div>
         </div>
         <div class="content">
