--- a/_includes/registration-button.html
+++ b/_includes/registration-button.html
@@ -7,10 +7,17 @@
       </button>
     </a>
   </div>
-  <div class="column">
+  <!-- <div class="column">   Previously Abstract Submission
     <a href="https://openreview.net/group?id=harms-risks-ai-military.org/HRAIM/2024/Workshop">
       <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ff933b;">
-        Abstract submissions
+        Abstract submission
+      </button>
+    </a>
+  </div> -->
+  <div class="column">
+    <a href="accepted-abstracts.html">
+      <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ff933b;">
+        Accepted Abstracts
       </button>
     </a>
   </div>
