--- a/_includes/watch-recordings-button.html
+++ b/_includes/watch-recordings-button.html
@@ -1,9 +1,16 @@
 <div class="columns container">
   <div class="column is-one-half"></div>
   <div class="column">
-    <a href="">
+    <a href="https://www.youtube.com/playlist?list=PLXJ0UJfeO6DP20gVqpRho_qooTkxnTIP-">
       <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ff933b;">
-        Watch Recordings (Coming Soon)!
+        Watch 1st Day Recordings!
+      </button>
+    </a>
+  </div>
+  <div class="column">
+    <a href="https://www.youtube.com/playlist?list=PLXJ0UJfeO6DME5iPXWirP-Z8f7jLjfM25">
+      <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ff933b;">
+        Watch 2nd Day Recordings!
       </button>
     </a>
   </div>
