--- a/_includes/watch-recordings-button.html
+++ b/_includes/watch-recordings-button.html
@@ -1,14 +1,14 @@
 <div class="columns container">
   <div class="column is-one-half"></div>
   <div class="column">
-    <a href="https://www.youtube.com/playlist?list=PLXJ0UJfeO6DP20gVqpRho_qooTkxnTIP-">
+    <a href="https://www.youtube.com/playlist?list=PLXJ0UJfeO6DP20gVqpRho_qooTkxnTIP-" target="_blank">
       <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ff933b;">
         Watch 1st Day Recordings!
       </button>
     </a>
   </div>
   <div class="column">
-    <a href="https://www.youtube.com/playlist?list=PLXJ0UJfeO6DME5iPXWirP-Z8f7jLjfM25">
+    <a href="https://www.youtube.com/playlist?list=PLXJ0UJfeO6DME5iPXWirP-Z8f7jLjfM25" target="_blank">
       <button class="button is-responsive is-link is-large is-rounded is-fullwidth" style="background-color: #ff933b;">
         Watch 2nd Day Recordings!
       </button>
